. [FIX] ClippingNode: Uses glClear to clear the stencil buffer (issue #1463)
. [FIX] Director: Only create the statsLabels if view is not nil
. [FIX] GLProgram: If shader files are not found at init time, returns nil and log warning on console
. [FIX] RenderTexture: returns correct value of contentSize
. [FIX] Texture2D: Logs using RGB565 textures only if RGB565 is being used
			Fixed deprecation warnings on iOS6 (issue #1467)
. [3RD] JS Bindings: Updated to v0.6
. [3RD] CCBReader: new version of CCBReader (which version is it???)
. [3RD] SpiderMonkey: Updated to v19.0

version 2.1-rc0a  07-Feb-2013
. [NEW] Actions: Stackable actions behavior can be disabled at compile time (issue #1461)
		BezierTo copy: works as expected
. [FIX] LabelBMFont: setting color of label and individual chars works as expected
. [FIX] RGBAProtocol: color and opacity are propagated if parent has cascade property enabled
		renamed methods: cascadeColor -> cascadeColorEnabled, cascadeOpacity -> cascadeOpacityEnabled
. [FIX] Sprite: color code improved. Removed 'unmodifiedColor' ivar.
. [FIX] SpriteFrame: rectInPixels is calculated correctly

version 2.1-rc0	 28-Jan-2013
. [NEW] Actions: All the actions that modify the position property can be run at the same time.
		MoveBy/To, JumpBy/To, BezierTo/By, CatmullRomTo/By and CardinalSplineTo/By won't override the results of previous actions.
. [NEW] FileUtils: Added "filename lookup" dictionary, useful to alter the name of an asset in runtime. Useful for cross platform
. [NEW] GLProgram: Added uniformLocationForName: method
. [NEW] NodeRGBA: New node that implements opacity and color. Sprite, Label, Menu and other are subclasses of this one.
		It also supports cascading color and opacity (disabled by default in v2.1)
. [NEW] OpenGL: CC_ENABLE_GL_STATE_CACHE is enabled by default. If you are migrating from v1.x, then turn it off to easy the transition
. [FIX] Texture: PVRv3 textures automatically set the correct value for premultiplid alpha