@@ -10,8 +10,11 @@
 
 static int sceneIdx=-1;
 static NSString *tests[] = {
+	@"RenderTextureIssue1464",
+
 	@"RenderTextureSave",
 	@"RenderTextureIssue937",
+	@"RenderTextureIssue1464",
 	@"RenderTextureZbuffer",
 	@"RenderTextureTestDepthStencil",
 	@"RenderTextureTargetNode",
@@ -368,8 +371,7 @@ Class restartAction()
 #endif // __CC_PLATFORM_MAC
 @end
 
-#pragma mark -
-#pragma mark RenderTextureIssue937
+#pragma mark - RenderTextureIssue937
 
 @implementation RenderTextureIssue937
 
@@ -444,8 +446,56 @@ Class restartAction()
 }
 @end
 
-#pragma mark -
-#pragma mark RenderTextureZbuffer
+#pragma mark - RenderTextureIssue1464
+
+@implementation RenderTextureIssue1464
+
+-(id) init
+{
+	if( (self=[super init]) ) {
+
+		CCLayerColor *background = [CCLayerColor layerWithColor:ccc4(200,200,200,255)];
+		[self addChild:background];
+
+		/* A2 & B2 setup */
+		CCRenderTexture *rend = [CCRenderTexture renderTextureWithWidth:256 height:256 pixelFormat:kCCTexture2DPixelFormat_RGBA4444];
+
+		CCSprite *sprite = [CCSprite spriteWithFile:@"grossini.png"];
+		[sprite setPosition:ccp(128,128)];
+
+		[rend begin];
+
+		// A2
+		[sprite visit];
+
+		[rend end];
+
+		CGSize s = [[CCDirector sharedDirector] winSize];
+
+		[self addChild:rend];
+		rend.position = ccp( s.width/2, s.height/2);
+
+		id fadeout = [CCFadeOut actionWithDuration:2];
+		id fadein = [fadeout reverse];
+		id seq = [CCSequence actions: fadeout, fadein, nil];
+		id fe = [CCRepeatForever actionWithAction:seq];
+		[rend.sprite runAction:fe];
+	}
+
+	return self;
+}
+-(NSString*) title
+{
+	return @"Testing issue #1464";
+}
+
+-(NSString*) subtitle
+{
+	return @"Sprite should fade in / out without problems";
+}
+@end
+
+#pragma mark - RenderTextureZbuffer
 
 @implementation RenderTextureZbuffer
 
